--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,6 @@
     "description": "Add dailymotion as media asset provider for TYPO3.",
     "type": "typo3-cms-extension",
     "homepage": "https://github.com/ameos/ameos_ameos_dailymotion",
-    "version": "1.0.2",
     "require": {
         "typo3/cms": ">=7.6.0,<8.7.99"
     },
@@ -13,7 +12,7 @@
         "Dailymotion",
         "Media asset provider"
     ],
-    "license": "GPL 2",
+    "license": "GPL-3.0-or-later",
     "authors": [
         {
             "name": "Ameos Team",
