--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,11 @@
     "type": "typo3-cms-extension",
     "homepage": "https://github.com/ameos/ameos_dailymotion",
     "require": {
-        "typo3/cms": ">=7.6.0,<9.5.99"
+        "typo3/cms-core": "^8.7 | ^9 | dev-master",
+        "typo3/cms-backend": "^8.7 | ^9 | dev-master",
+        "typo3/cms-frontend": "^8.7 | ^9 | dev-master",
+        "typo3/cms-recordlist": "^8.7 | ^9 | dev-master",
+        "php": ">=7.0.0"
     },
     "keywords": [
         "TYPO3",
@@ -24,5 +28,6 @@
         "psr-4": {
             "Ameos\\AmeosDailymotion\\": "Classes"
         }
-    }
+    },
+    "non-feature-branches": ["development", "staging"]
 }
