--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,9 @@
     "type": "typo3-cms-extension",
     "homepage": "https://github.com/ameos/ameos_dailymotion",
     "require": {
-        "typo3/cms-core": "^8.7 | ^9 | dev-master",
-        "typo3/cms-backend": "^8.7 | ^9 | dev-master",
-        "typo3/cms-frontend": "^8.7 | ^9 | dev-master",
-        "typo3/cms-recordlist": "^8.7 | ^9 | dev-master",
+        "typo3/cms-core": "^8.7 | ^9.5 | ^10.4 | dev-master",
+        "typo3/cms-fluid": "^8.7 | ^9.5 | ^10.4 | dev-master",
+        "typo3/cms-extbase": "^8.7 | ^9.5 | ^10.4 | dev-master",
         "php": ">=7.0.0"
     },
     "keywords": [
