--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,9 @@
     "type": "typo3-cms-extension",
     "homepage": "https://github.com/ameos/ameos_dailymotion",
     "require": {
-        "typo3/cms-core": "^8.7 | ^9.5 | ^10.4 | dev-master",
-        "typo3/cms-fluid": "^8.7 | ^9.5 | ^10.4 | dev-master",
-        "typo3/cms-extbase": "^8.7 | ^9.5 | ^10.4 | dev-master",
+        "typo3/cms-core": "^8.7 | ^9.5 | ^10.4 | ^11.5 | dev-master",
+        "typo3/cms-fluid": "^8.7 | ^9.5 | ^10.4 | ^11.5 | dev-master",
+        "typo3/cms-extbase": "^8.7 | ^9.5 | ^10.4 | ^11.5 | dev-master",
         "php": ">=7.0.0"
     },
     "keywords": [
@@ -26,6 +26,11 @@
     "autoload": {
         "psr-4": {
             "Ameos\\AmeosDailymotion\\": "Classes"
+        }
+    },
+    "extra": {
+        "typo3/cms": {
+            "extension-key": "ameos_dailymotion"
         }
     },
     "non-feature-branches": ["development", "staging"]
