--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "typo3-cms-extension",
     "homepage": "https://github.com/ameos/ameos_dailymotion",
     "require": {
-        "typo3/cms-core": "^12.4",
+        "typo3/cms-core": "^12.4 | ^13.1",
         "php": ">=8.0.0"
     },
     "keywords": [
